fix: Adjust <ul> gap to that from the exercise

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -56,5 +56,5 @@ ul {
   list-style-type: none;
   display: flex;
   padding: 0;
-  gap: 12px;
+  gap: 16px;
 }
